# ToolMux

./: .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  mcp.json  pyproject.toml  requirements.txt  setup.sh
.kiro/: mcp.json
docs/: ARCHITECTURE.md  DEPLOYMENT_PLAN.md  DEVELOPER_GUIDE.md  FIX_SUMMARY.md  GIT_COMMIT_CHECKLIST.md  PUBLICATION_REPORT.md  README.md  SMART_PROXY_PLAN.md  TEST_RESULTS.md  TOOLMUX_V2_SPEC.md  USER_GUIDE.md
docs/superpowers/plans/: 2026-04-05-internal-to-public-sync.md
docs/superpowers/specs/: 2026-04-05-internal-to-public-sync-design.md  2026-04-06-search-code-modes-design.md
tests/: conftest.py  test_backend.py  test_bundle_resolution.py  test_config_cli.py  test_e2e.py  test_e2e_pypi.py  test_e2e_simple.py  test_http_mcp.py  test_http_server.py  test_http_transport.py  test_list_all_tools.py  test_mcp_protocol.py  test_protocol_e2e.py  test_pure_functions.py  test_search_code_modes.py  test_simple.py  test_token_analysis.py  test_token_analysis_v2.py  test_token_optimization.py
toolmux/: __init__.py  __main__.py  main.py
toolmux/Prompt/: TOOLMUX_AGENT_INSTRUCTIONS.md
toolmux/examples/: README.md  brave-search.json  example_agent_config.json  example_mcp.json  filesystem.json  http-servers.json  kiro-integration.json  kiro-mcp-config.json  mixed-servers.json  q-cli-agent-config.json  q-cli-agent.json  q-cli-simple.json  sqlite.json
toolmux/scripts/: toolmux_hook.sh
